# syno-cert-decoder

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.md  installation.md  make.bat  usage.md
syno_cert_decoder/: __init__.py  cli.py  syno_cert_decoder.py
tests/: __init__.py  test_syno_cert_decoder.py
