[metadata]
name = syno_cert_decoder
version = attr: syno_cert_decoder.__version__
description = A python script to decode installed Synology certs into their own separate PEM files
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/glarizza/syno_cert_decoder
author = Gary Larizza
author_email = glarizza@me.com
keywords = syno_cert_decoder
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Documentation = https://github.com/glarizza/syno_cert_decoder/README.md
    Source = https://github.com/glarizza/syno_cert_decoder
    Tracker = https://github.com/glarizza/syno_cert_decoder/issues


[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.6
install_requires =
    importlib; python_version == "2.6"
    pendulum
    typer>=0.4.0
    debugpy>=1.5.1
test_requires =
    pytest>=3

[options.entry_points]
console_scripts =
    syno_cert_decoder = syno_cert_decoder.cli:app
